# High_precision_real_number_library

./: .gitignore  CMakeLists.txt  README.md  main.c
Compute/: CompareSigndBigNum.c  ComparesfloatBigNum.c  CompareunsignedBigNum.c  DiviseSignedBigNum_test.c  DiviseUnsignedBigNum_test.c  Modsignedbignum_test.c  README.md  basicdivise.h  basicdivise_test.c  bijiao.h  divisesignedbignum.h  diviseunsignedbignum.h  modsignedbignum.h  modunsignedbignum.h  modunsignedbignum_test.c  multiplication.h  multiplyFloatBignNum.h  multiplySigndBignNum.h  multiplyUnsigndBignNum.h  plusSigndBigNum.h  plusUnsigndBigNum.h  subSignedBigNum.h  subUnsigndBigNum.h
GUI/: gui.c  gui.h
Model/: struct.h
Utils/: IncludeZero.c  IncludeZero.h  Utils.c  Utils.h  addBigNumFlag.h  cmpUnsignedBigNum.h  judgeFLoatBigNum.h  judgeSigndBigNum.h  removeSigndBigNumFlag.h  sepBigNumDe.h  sepBigNumIn.h
newCompute/: compare.c  compare.h  comparison.c  comparison.h  division.c  division.h  misc.c  misc.h  module.c  module.h  multiplication.c  multiplication.h  plus.c  plus.h  subtraction.c  subtraction.h
